Fixes style for AlertView on iOS

--- a/ionic/components/alert/alert.ios.scss
+++ b/ionic/components/alert/alert.ios.scss
@@ -10,16 +10,16 @@ $alert-ios-background:                          rgba(0,0,0,0) !default;
 $alert-ios-border-radius:                       13px !default;
 $alert-ios-background-color:                    #f8f8f8 !default;
 
-$alert-ios-head-padding:                        12px 16px 20px !default;
+$alert-ios-head-padding:                        12px 16px 7px !default;
 $alert-ios-head-text-align:                     center !default;
 
-$alert-ios-title-margin-top:                    12px !default;
-$alert-ios-title-font-weight:                   bold !default;
+$alert-ios-title-margin-top:                    8px !default;
+$alert-ios-title-font-weight:                   600 !default;
 $alert-ios-title-font-size:                     17px !default;
 $alert-ios-sub-title-font-size:                 14px !default;
 $alert-ios-sub-title-text-color:                #666 !default;
 
-$alert-ios-message-padding:                     0px 16px 24px !default;
+$alert-ios-message-padding:                     0px 16px 21px !default;
 $alert-ios-message-text-color:                  inherit !default;
 $alert-ios-message-text-align:                  center !default;
 $alert-ios-message-font-size:                   13px !default;
@@ -30,12 +30,12 @@ $alert-ios-input-background-color:              #fff !default;
 $alert-ios-input-border:                        1px solid #ccc !default;
 $alert-ios-input-border-radius:                 4px !default;
 
-$alert-ios-button-min-height:                   44px !default;
+$alert-ios-button-min-height:                   45px !default;
 $alert-ios-button-font-size:                    17px !default;
 $alert-ios-button-text-color:                   map-get($colors-ios, primary) !default;
 $alert-ios-button-background-color:             transparent !default;
 $alert-ios-button-border-radius:                0 !default;
-$alert-ios-button-border-color:                 #c8c7cc !default;
+$alert-ios-button-border-color:                 #dbdbdf !default;
 $alert-ios-button-activated-background-color:   #e9e9e9 !default;
 
 $alert-checkbox-ios-icon-size:                  $checkbox-ios-icon-size !default;
